<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/register"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/font"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginHorizontal="32dp"
        android:padding="16dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/font"
        android:drawableLeft="@drawable/baseline_person"
        android:drawablePadding="8dp"
        android:drawableTint="@color/icon"
        android:background="@drawable/edit"
        android:elevation="8dp"
        android:fontFamily="@font/poppins_regular"/>
    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:padding="16dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/font"
        android:drawableLeft="@drawable/baseline_email"
        android:drawablePadding="8dp"
        android:drawableTint="@color/icon"
        android:background="@drawable/edit"
        android:elevation="8dp"
        android:fontFamily="@font/poppins_regular"/>
    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:padding="16dp"
        android:hint="Phone"
        android:inputType="phone"
        android:textColor="@color/font"
        android:drawableLeft="@drawable/baseline_phone"
        android:drawablePadding="8dp"
        android:drawableTint="@color/icon"
        android:background="@drawable/edit"
        android:elevation="8dp"
        android:fontFamily="@font/poppins_regular"/>
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:padding="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/font"
        android:drawableLeft="@drawable/baseline_lock"
        android:drawablePadding="8dp"
        android:drawableTint="@color/icon"
        android:background="@drawable/edit"
        android:elevation="8dp"
        android:fontFamily="@font/poppins_regular"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/terms_condition"
        android:textSize="10sp"
        android:textColor="@color/font"
        android:gravity="center"
        android:fontFamily="@font/poppins_regular"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/edit"
        android:backgroundTint="@color/button"
        android:elevation="8dp"
        android:fontFamily="@font/poppins_bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already Have an Account? "
            android:textSize="16sp"
            android:textColor="@color/font"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            />
        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@color/button"
            android:fontFamily="@font/poppins_regular"
            />
    </LinearLayout>


</LinearLayout>